--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="activity_main_title">Wave advance</string>
+    <string name="properties_title">Свойства среды</string>
     <string name="message_loading">Загрузка…</string>
 </resources>
