Add "Stop" menu action.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="kappa">kappa</string>
     <string name="k1">k1</string>
     <string name="kappa1">kappa1</string>
+    <string name="action_stop">Stop</string>
 </resources>
