--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="kappa">kappa</string>
     <string name="k1">k1</string>
     <string name="kappa1">kappa1</string>
+    <string name="action_resume">Resume</string>
     <string name="action_stop">Stop</string>
 </resources>
